panel refactoring reduce loc